--- a/manage/config/config.yml
+++ b/manage/config/config.yml
@@ -1,5 +1,45 @@
 ---
 managed_code_path: /opt/overview/managed-code
+projects:
+  main:
+    url: git@github.com:overview/overview-server.git
+    build_command: 'play dist'
+    export_command: 'unzip -q -j dist/overview*.zip "*.jar" -d #{DESTINATION_PATH}'
+    copy:
+      web: ''
+  worker:
+    url: git@github.com:overview/overview-server.git
+    build_command: 'play worker/simple-dist'
+    export_command: 'unzip -q -j worker/dist/worker*.zip "*.jar" -d #{DESTINATION_PATH}'
+    copy: 
+      worker: ''
+  documentset-worker:
+    url: git@github.com:overview/overview-server.git
+    build_command: 'play documentset-worker/simple-dist'
+    export_command: 'unzip -q -j documentset-worker/dist/documentset-worker*.zip "*.jar" -d #{DESTINATION_PATH}'
+    copy: 
+      worker: ''
+  message-broker:
+    url: git@github.com:overview/overview-server.git
+    build_command: 'play message-broker/simple-dist'
+    export_command: 'unzip -q -j message-broker/dist/message-broker*.zip "*.jar" -d #{DESTINATION_PATH}'
+    copy: 
+      worker: ''
+  config:
+    url: git@github.com:overview/aws-overview-config.git
+    build_command: '/opt/overview/managed-code/config/repo/generate.sh'
+    clean_command: 'rm -rv generated/'
+    build_env:
+      OVERVIEW_SECRETS: /opt/overview/config/manage/secrets.yml
+      OVERVIEW_CONFIG: /opt/overview/config/manage/config.yml
+    export_command: 'cp -a generated/* #{DESTINATION_PATH}'
+    copy:
+      web: '#{ENV}/web'
+      worker: '#{ENV}/worker'
+      database: '#{ENV}/database'
+
+
+  
 repositories:
   main:
     url: git@github.com:overview/overview-server.git
