Clean everything when cleaning workers

--- a/manage/config/config.yml
+++ b/manage/config/config.yml
@@ -11,14 +11,14 @@ projects:
   worker:
     url: git@github.com:overview/overview-server.git
     build_command: 'play worker/simple-dist'
-    clean_command: 'play worker/clean'
+    clean_command: 'play all/clean'
     export_command: 'unzip -q -j worker/dist/worker*.zip "*.jar" -d #{DESTINATION_PATH}'
     copy: 
       worker: ''
   documentset-worker:
     url: git@github.com:overview/overview-server.git
     build_command: 'play documentset-worker/simple-dist'
-    clean_command: 'play documentset-worker/clean'
+    clean_command: 'play all/clean'
     export_command: 'unzip -q -j documentset-worker/dist/documentset-worker*.zip "*.jar" -d #{DESTINATION_PATH}'
     copy: 
       worker: ''
