--- a/manage/Gemfile
+++ b/manage/Gemfile
@@ -1,6 +1,15 @@
 source 'https://rubygems.org'
 
-gem 'grit'
+gem 'git'
 gem 'net-ssh'
 gem 'net-scp'
 gem 'posix-spawn'
+
+group :test do
+  gem 'rspec', '~> 3.0.0.beta2'
+end
+
+group :development do
+  gem 'debugger'
+  gem 'guard-rspec', require: false
+end
