--- a/manage/config/config.yml
+++ b/manage/config/config.yml
@@ -8,51 +8,43 @@ sources:
 
   aws-overview-config:
     url: https://github.com/overview/aws-overview-config.git
-    build_env:
-      OVERVIEW_SECRETS: /opt/overview/config/manage/secrets.yml
-      OVERVIEW_CONFIG: /opt/overview/config/manage/config.yml
     build_commands:
       - OVERVIEW_CONFIG=/opt/overview/config/manage/config.yml OVERVIEW_SECRETS=/opt/overview/config/manage/secrets.yml ./generate.sh
-      - zip -r archive.zip generated
+      - "(cd generated && zip -r ../archive.zip *)"
 
 build_overview_server_component: &build_overview_server_component
   source: overview-server
-  build_commands:
-    - "unzip #{source_artifact.archive_zip}"
-    - "cd archive/lib"
-    - "xargs -I '{}' -a ../#{component.name}/classpath.txt ln '{}' #{component_artifact.contents_path}"
+  prepare_commands:
+    - "(cd source/libs && xargs -I '{}' -a ../<%= component.name %>/classpath.txt cp '{}' ../../component)"
 
 build_config_component: &build_config_component
   source: aws-overview-config
-  build_commands:
-    - "unzip #{source_artifact.archive_zip}"
-    - "cd archive/generated"
-    - "cp -a #{component.name[7..-1]}/* #{component_artifact.contents_path}"
-  install_commands:
-    - "cp -a #{component_artifact.path}/root/* /"
-  post_install_commands:
-    - "#{component_artifact.path}/scripts/start.sh"
+  prepare_commands:
+    - "cp -a source/<%= environment %>/<%= component.name[7..-1] %>/* component"
+  deploy_commands:
+    - "sudo cp -a <%= component.installed_path %>/root/* /"
+    - "<%= component.installed_path %>/scripts/start.sh"
 
 components:
   frontend:
     <<: *build_overview_server_component
-    post_install_commands:
+    deploy_commands:
       - /opt/overview/config-web/scripts/start.sh
   worker:
     <<: *build_overview_server_component
-    post_install_commands:
+    deploy_commands:
       - /opt/overview/config-worker/scripts/start.sh
   documentset-worker:
     <<: *build_overview_server_component
-    post_install_commands:
+    deploy_commands:
       - /opt/overview/config-worker/scripts/start.sh
   message-broker:
     <<: *build_overview_server_component
-    post_install_commands:
+    deploy_commands:
       - /opt/overview/config-worker/scripts/start.sh
   search-index:
     <<: *build_overview_server_component
-    post_install_commands:
+    deploy_commands:
       - /opt/overview/config-searchindex/scripts/start.sh
 
   config-web:
@@ -63,3 +55,25 @@ components:
     <<: *build_config_component
   config-searchindex:
     <<: *build_config_component
+
+machine_types:
+  web:
+    components:
+      - config-web
+      - frontend
+
+  worker:
+    components:
+      - config-worker
+      - worker
+      - documentset-worker
+      - message-broker
+
+  search-index:
+    components:
+      - search-index
+      - config-searchindex
+
+  database:
+    components:
+      - config-database
