--- a/manage/config/config.yml
+++ b/manage/config/config.yml
@@ -46,10 +46,9 @@ remote_build:
   cache_volume_id: vol-998c9fdb
   keypair_name: manage
   init_commands:
-    - sudo apt-get -q update
-    - sudo apt-get -qq dist-upgrade
-    - sudo apt-get -q update
-    - sudo apt-get -qq install build-essential nodejs nodejs-dev nodejs-legacy npm openjdk-8-jre-headless zip
+    - sudo apt-get -q update >/dev/null # -qq prevents update from working
+    - sudo apt-get -qq -y dist-upgrade >/dev/null # -qq doesn't mute stuff
+    - sudo apt-get -qq -y install build-essential nodejs nodejs-dev nodejs-legacy npm openjdk-8-jdk zip ca-certificates-java >/dev/null
     - mkdir -p build-cache && sudo mount /dev/xvdg build-cache && ln -sf `pwd`/build-cache/.ivy2 . && ln -sf `pwd`/build-cache/.npm . && ln -sf `pwd`/build-cache/.sbt .
     - sudo umount /dev/xvde && sudo mkswap -f /dev/xvde && sudo swapon /dev/xvde
     - mkdir -p build && sudo mkfs.ext2 -q /dev/xvdf && sudo mount /dev/xvdf build && sudo chown ubuntu:ubuntu build
