--- a/manage/config/config.yml
+++ b/manage/config/config.yml
@@ -25,7 +25,7 @@ machine_types:
       - sudo /opt/overview/prepare-worker.sh worker
       - sudo systemctl start overview-worker
 
-    stop:
+    stop_commands:
       - sudo systemctl stop overview-worker
 
     restart_commands:
