Make `logstash` a valid instance type

--- a/manage/config/config.yml
+++ b/manage/config/config.yml
@@ -8,6 +8,11 @@ sources:
       - ./build archive.zip
 
 machine_types:
+  logstash:
+    start_commands: []
+    stop_commands: []
+    restart_commands: []
+
   conglomerate:
     start_commands:
       - sudo /opt/overview/prepare-frontend.sh
